fix(bookmark): fix flickering on items that await dropdowns
Actually, this is not only about bookmarks, but I don't want to create a new PR

--- a/src/style/index.module.scss
+++ b/src/style/index.module.scss
@@ -9,6 +9,10 @@
     }
 }
 
+:local(.awaits-dropdown) {
+    margin-right: 13px !important;
+}
+
 :local(.navbar-item) {
     #usernavigation > :not(&) {
         order: 0;
